Sun Mar  7 17:58:07 1999  Gray Watson  <gray@burger.letters.com>

	* Added DUMP_UNFREED_SUMMARY_ONLY variable to the settings.dist
 	file.

	* Added MEMORY_TABLE_SIZE and MEMORY_TABLE_LOG variables to the
	settings.dist file.

	* Fixed problem with valloc exposed by moving to random() from
	rand().  Grrr.

	* Added memory table code for grouping of allocated and non-freed
 	memory.  Looks great!

Thu Mar  4 19:28:45 1999  Gray Watson  <gray@whopper.letters.com>

	* Removed a number of static variables for string buffers.  Yuck.

	* Removed PERMISSION file and all references to commercial-ness.

	* Moved to internal sprintf code for snprintf, etc..

Fri Dec 11 00:04:04 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.2.

	* Fixed really bad bug which basically killed pthread support.

Mon Nov 16 11:51:39 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.1.

	* Fixed signal autoconfiguration.  Bad dog.

	* Releasing dmalloc version 4.1.0.

Thu Nov 12 10:08:58 1998  Gray Watson  <gray@burger.letters.com>

	* Added HTML versions of the manuals to the releases.

	* Added FREED_POINTER_DELAY in settings.h which will hold a
	pointer from being reused for a certain amount of time.

	* Renamed allow-zero token to be allow-free-null.

	* Added LOG_TIME_NUMBER and LOG_CTIME_STRING to the settings.dist
	file for logging times in the logfile.

	* Disabled the log-thread-id macro.  Use the LOG_THREAD_ID
	define in settings.h to control.

	* Disabled the log-stamp macro.  Use the STORE_TIME define in
	settings.h to control.

Tue Nov 10 12:43:00 1998  Gray Watson  <gray@burger.letters.com>

	* Added Jens' cool gdb script and -g (--gdb) flag to dmalloc
	utility.

	* Added missing delete[] function to the C++ code.  Thanks Jens.

Mon Nov  9 11:48:29 1998  Gray Watson  <gray@burger.letters.com>

	* Releasing dmalloc version 4.1.0 beta.

	* Moved some settings from chunk_loc.h into settings.dist.
